Fixed z-index nav

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -84,6 +84,7 @@ header {
 	width: 800px;
 	background: rgb(241,248,255);
 	border-radius: 10px;
+	z-index: 1;
 }
 
 nav {
